Disable caBLE on Linux by default, but keep enabled elsewhere.

BLE on Linux is not officially supported by Chrome, and
behavior can vary greatly depending on the BlueZ version or
BLE dongle/adapter used, so we are considering this an
experimental/poweruser feature.

Bug: 924006
Change-Id: I7a58479048ab275019cc7bb2bc0f00b60222c2d0
Reviewed-on: https://chromium-review.googlesource.com/c/1457716
Reviewed-by: Kim Paulhamus <kpaulhamus@chromium.org>
Reviewed-by: Martin Kreichgauer <martinkr@google.com>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Kim Paulhamus <kpaulhamus@chromium.org>
Cr-Commit-Position: refs/heads/master@{#630523}
Former-commit-id: d1f3480ff3e856730e1d9131944976fffa630a8e